Setting things up

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <button class="button">+</button>
       <button class="button">-</button>
       <button class="button">x</button>
-      <button class="button">Del</button>
-      <button class="button">Reset</button>
-      <button class="button">=</button>
+      <button class="button higlight">Del</button>
+      <button class="button higlight">Reset</button>
+      <button class="button clr">=</button>
     </div>
   </main>
 
