Fully responsive on mobile and desktop

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="theme-selector">
           <p class="theme-title">Theme</p>
           <div class="theme-buttons">
-            <input type="radio" name="theme" id="dark" class="dark">
+            <input type="radio" name="theme" id="dark" class="dark" checked>
             <input type="radio" name="theme" id="light" class="light">
             <input type="radio" name="theme" id="violet" class="violet">
           </div>
@@ -41,27 +41,27 @@
     </header>
 
     <div class="screen">
-      <p class="operation"></p>
+      <p class="operation">399,981</p>
     </div>
 
     <div class="buttons-grid">
-      <button class="button">1</button>
-      <button class="button">2</button>
-      <button class="button">3</button>
-      <button class="button">4</button>
-      <button class="button">5</button>
-      <button class="button">6</button>
-      <button class="button">7</button>
-      <button class="button">8</button>
-      <button class="button">9</button>
-      <button class="button">0</button>
+      <button class="button number">7</button>
+      <button class="button number">8</button>
+      <button class="button number">9</button>
+      <button class="button highlight">DEL</button>
+      <button class="button number">4</button>
+      <button class="button number">5</button>
+      <button class="button number">6</button>
+      <button class="button operator">+</button>
+      <button class="button number">1</button>
+      <button class="button number">2</button>
+      <button class="button number">3</button>
+      <button class="button operator">-</button>
       <button class="button">.</button>
-      <button class="button">/</button>
-      <button class="button">+</button>
-      <button class="button">-</button>
-      <button class="button">x</button>
-      <button class="button higlight">Del</button>
-      <button class="button higlight">Reset</button>
+      <button class="button number">0</button>
+      <button class="button operator">/</button>
+      <button class="button operator">x</button>
+      <button class="button highlight reset">RESET</button>
       <button class="button clr">=</button>
     </div>
   </main>
