Working on the calculator logic

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     </header>
 
     <div class="screen">
-      <p class="operation">399,981</p>
+      <p class="operation"></p>
     </div>
 
     <div class="buttons-grid">
       <button class="button number">7</button>
       <button class="button number">8</button>
       <button class="button number">9</button>
-      <button class="button highlight">DEL</button>
+      <button class="button highlight del">DEL</button>
       <button class="button number">4</button>
       <button class="button number">5</button>
       <button class="button number">6</button>
@@ -57,12 +57,12 @@
       <button class="button number">2</button>
       <button class="button number">3</button>
       <button class="button operator">-</button>
-      <button class="button">.</button>
+      <button class="button number">.</button>
       <button class="button number">0</button>
       <button class="button operator">/</button>
       <button class="button operator">x</button>
       <button class="button highlight reset">RESET</button>
-      <button class="button clr">=</button>
+      <button class="button clr operator">=</button>
     </div>
   </main>
 
