--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
         <div class="theme-selector">
           <p class="theme-title">Theme</p>
           <div class="theme-buttons">
+            <label for="dark" hidden>Dark</label>
             <input type="radio" name="theme" id="dark" class="dark" checked>
+            <label for="light" hidden>Light</label>
             <input type="radio" name="theme" id="light" class="light">
+            <label for="violet" hidden>Violet</label>
             <input type="radio" name="theme" id="violet" class="violet">
           </div>
         </div>
